--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fullcalendar/angular": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^6.1.9",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
