--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.0",
     "@fullcalendar/angular": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
+    "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^6.1.9",
     "rxjs": "~7.8.0",
